Bug 512951 - "Last used" info of a network connection is not updated until Plasma is restarted
Summary: "Last used" info of a network connection is not updated until Plasma is resta...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: 6.5.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-04 18:20 UTC by Patrick Silva
Modified: 2026-03-27 11:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments
Network overview showing just disconnected network as last used 4 hours ago (34.17 KB, image/png)
2026-03-01 14:33 UTC, Kjetil Kilhavn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-12-04 18:20:05 UTC
STEPS TO REPRODUCE
1. open Wi-Fi & Networking KCM
2. create a new wired connection
3. connect using the newly created connection
4. disconnect from the network
5. open plasma-nm applet and observe the connection created in the step 2

OBSERVED RESULT
below the network created in the step 2 (and connected in the step 3) we can read "Never used".
After restarting Plasma with "plasmashell --replace" command we can read "Last used x minutes ago".

EXPECTED RESULT
"Last used" info of a network connection should be updated without restarting Plasma.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Graphics Platform: Wayland
Comment 1 Nate Graham 2025-12-08 22:06:13 UTC Comment hidden (spam)
Comment 2 Nate Graham 2025-12-08 22:06:52 UTC Comment hidden (spam)
Comment 3 John 2025-12-08 22:35:04 UTC
I haven't tried to reproduce this exact problem, but I remember seeing that 'last used' was wrong at least once in the past.
Comment 4 Kjetil Kilhavn 2026-03-01 14:33:20 UTC
Created attachment 190240 [details]
Network overview showing just disconnected network as last used 4 hours ago
Comment 5 Kjetil Kilhavn 2026-03-01 14:36:18 UTC
Comment on attachment 190240 [details]
Network overview showing just disconnected network as last used 4 hours ago

I found this bug report when I was going to report the same issue. My system setup different, but that is probably irrelevant here.

The screenshot was taken shortly after I disconnected from KKilhavn 5GHz, so it was definitely not 4 hours since I had used it last.

Operating System: openSUSE Tumbleweed-Slowroll 20260202
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1
Kernel Version: 6.18.9-1.0.2.sr20260202-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz
Memory: 32 GiB of RAM (31.1 GiB usable)
Graphics Processor: Intel® Iris® Xe Graphics
Manufacturer: Notebook
Product Name: NS50_70MU
System Version: Applicable
Comment 6 Bug Janitor Service 2026-03-27 01:11:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/547
Comment 7 Aviral Singh 2026-03-27 11:28:01 UTC
Git commit 897932b454759a60268af9ffcc45962c40866942 by Aviral Singh.
Committed on 27/03/2026 at 03:38.
Pushed by nicolasfella into branch 'master'.

networkmodel: refresh Last used immediately on disconnect

This MR fixes inaccurate Last used in open System Settings by updating the connection timestamp immediately when a disconnect occurs.

M  +3    -0    libs/models/networkmodel.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/897932b454759a60268af9ffcc45962c40866942
Comment 8 Nicolas Fella 2026-03-27 11:28:58 UTC
Git commit 6e6dad7f56b573814f02f979286081045e7120b1 by Nicolas Fella, on behalf of Aviral Singh.
Committed on 27/03/2026 at 11:28.
Pushed by nicolasfella into branch 'Plasma/6.6'.

networkmodel: refresh Last used immediately on disconnect

This MR fixes inaccurate Last used in open System Settings by updating the connection timestamp immediately when a disconnect occurs.

(cherry picked from commit 897932b454759a60268af9ffcc45962c40866942)

M  +3    -0    libs/models/networkmodel.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/6e6dad7f56b573814f02f979286081045e7120b1