networkmodel: refresh Last used immediately on disconnect

BUG: 512951

This MR fixes inaccurate Last used in open System Settings by updating the connection timestamp immediately when a disconnect occurs.

(cherry picked from commit 897932b454759a60268af9ffcc45962c40866942)